--- a/tasks/take_snapshot.yml
+++ b/tasks/take_snapshot.yml
@@ -12,6 +12,8 @@
         validate_certs: "{{ validate_certs | default(false) }}"
         folder: "{{ vm_folder | default('vm') }}"
         name: "{{ item.vm_name }}.{{ domain }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: vmware_tools_result
@@ -20,6 +22,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
@@ -35,6 +39,8 @@
         datacenter: "{{ datacenter_name }}"
         folder: "{{ vm_folder | default('vm') }}"
         name: "{{ item.vm_name }}.{{ domain }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: ensure_power_state_result
@@ -43,6 +49,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
@@ -59,6 +67,8 @@
         folder: "{{ vm_folder | default('vm') }}"
         name: "{{ item.vm_name }}.{{ domain }}"
         state: shutdownguest
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: vm_guest_shutdown_result
@@ -67,6 +77,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
@@ -99,6 +111,8 @@
         name: "{{ item.vm_name }}.{{ domain }}"
         state: present
         snapshot_name: "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: take_snapshot_result
@@ -107,6 +121,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
@@ -123,6 +139,8 @@
         folder: "{{ vm_folder | default('vm') }}"
         name: "{{ item.vm_name }}.{{ domain }}"
         state: poweredon
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: start_vm_result
@@ -131,6 +149,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
@@ -145,6 +165,8 @@
         validate_certs: "{{ validate_certs | default(false) }}"
         folder: "{{ vm_folder | default('vm') }}"
         name: "{{ item.vm_name }}.{{ domain }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       async: 300
       poll: 0
       register: vmware_tools_result
@@ -153,6 +175,8 @@
     - name: Make sure the tasks are until completion
       ansible.builtin.async_status:
         jid: "{{ item.ansible_job_id }}"
+      vars:
+        ansible_async_dir: "/tmp/.ansible_async"
       register: job_result
       until: job_result.finished
       retries: 100
